<resources>
    <string name="app_name">My Application</string>
    <string name="input_password_hint">Enter Password</string>
    <string name="new_member">New member? Register now</string>
    <string name="valid_email">Valid email</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="strong_password">Strong password</string>
    <string name="already_member">Already a member? Log in</string>
    <string name="terms_and_conditions">By checking the box you agree to our Terms and Conditions.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_main">Fragment Main</string>
    <string name="email_exists_error">Email exists</string>
    <string name="bad_password_error">Wrong password</string>
    <string name="heart_shaped_icon">heart shaped icon</string>
    <string name="sharing_icon">sharing icon</string>
    <string name="meal_image">An image of a meal</string>
</resources>