<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UnnecessaryYet">

    <ImageView
        android:id="@+id/mainPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="42dp"
        android:src="@drawable/main_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="90dp"
        android:text="Get Started"
        android:textColor="#252525"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/createFreeAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="by creating a free account"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/getStarted"
        app:layout_constraintStart_toStartOf="@+id/getStarted"
        app:layout_constraintTop_toBottomOf="@+id/getStarted"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputFullName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="30dp"
        android:hint="@string/full_name"
        app:endIconDrawable="@drawable/user"
        app:endIconMode="custom"
        app:layout_constraintBaseline_toBottomOf="@id/mainPic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_shape"
            android:paddingStart="22dp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputValidEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="19dp"
        android:hint="@string/valid_email"
        app:endIconDrawable="@drawable/mail"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputFullName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditValidEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_shape"
            android:paddingStart="22dp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPhoneNum"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="19dp"
        android:hint="@string/phone_number"
        app:endIconDrawable="@drawable/phone"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputValidEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_shape"
            android:paddingStart="22dp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputStrongPasswrd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="19dp"
        android:hint="Strong password"
        app:endIconDrawable="@drawable/lock"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputPhoneNum">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditStrongPasswrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_shape"
            android:paddingStart="22dp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/termsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:buttonTint="#CBCBCB"
        android:text="@string/terms_and_conditions"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="@+id/textInputStrongPasswrd"
        app:layout_constraintTop_toBottomOf="@+id/textInputStrongPasswrd" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="#6C63FF"
        android:drawableEnd="@drawable/vector"
        android:text="Register"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/alreadyAMember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/alreadyAMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:text="@string/already_member"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
